fixed overflow on nav

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     background: url(img/alien.jpg) no-repeat;
     background-size: cover;
     text-align:center;
-
+    overflow: hidden;
 }
 /*-------------------- loading screen ------------------*/
 
